crates/plotnik-tests/tests/03-analyze/fields/single_element_sequence_rejected.txt
Q = (foo
  bar: {(a)}
)
------------------ DIAGNOSTICS -------------------
error: field `bar` cannot match a sequence
 --> query.ptk:2:8
  |
2 |   bar: {(a)}
  |        ^^^^^
  |
help: a field holds a single child node; match one pattern, or move the sequence outside the field
-------------------- SYMBOLS ---------------------
Q
